--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -23,7 +23,19 @@
           Short URL ID: <a href="/u/<%= id %>"><%= id %></a>
         </p>
       </div>
-      <div class="card-footer text-muted"></div>
+      <div class="card-footer text-muted">
+        <h5 class="card-title h3">Edit</h5>
+        <form method="POST" action="/urls/<%= id %>">
+          <label for="longURL">New URL: </label>
+          <input
+          type="text"
+          name="longURL"
+          placeholder="http://"
+          style="width: 250px; margin: 1em"
+          />
+          <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
+      </div>
     </div>
     <!-- Bootstrap JS -->
     <script
