--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -18,5 +18,14 @@
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
     </div>
+    <form method="POST" action="/login">
+      <input
+        type="text"
+        name="username"
+        placeholder="Username"
+        style="width: 200px"
+      />
+    <button type="submit" class="btn btn-outline-dark">Login</button>
+    </form>
   </nav>
 </header>
