display username in header

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -18,6 +18,9 @@
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
     </div>
+    <span class="navbar-text" style="margin-right: 1em">
+      Logged in as: <%= username %>!
+    </span>
     <form method="POST" action="/login">
       <input
         type="text"
