--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -18,17 +18,23 @@
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
     </div>
-    <span class="navbar-text" style="margin-right: 1em">
-      Logged in as: <%= username %>!
-    </span>
-    <form method="POST" action="/login">
-      <input
-        type="text"
-        name="username"
-        placeholder="Username"
-        style="width: 200px"
-      />
-    <button type="submit" class="btn btn-outline-dark">Login</button>
-    </form>
+    <% if(username){ %>
+      <span class="navbar-text" style="margin-right: 1em">
+        Logged in as: <%= username %>!
+      </span>
+      <form method="POST" action="/logout">
+      <button type="submit" class="btn btn-outline-dark">Logout</button>
+      </form>
+    <% } else{ %>  
+      <form method="POST" action="/login">
+        <input
+          type="text"
+          name="username"
+          placeholder="Username"
+          style="width: 200px"
+        />
+      <button type="submit" class="btn btn-outline-dark">Login</button>
+      </form>
+   <% } %>
   </nav>
 </header>
