--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -18,9 +18,9 @@
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
     </div>
-    <% if(username){ %>
+    <% if(user){ %>
       <span class="navbar-text" style="margin-right: 1em">
-        Logged in as: <%= username %>!
+        Logged in as: <%= user.email %>!
       </span>
       <form method="POST" action="/logout">
       <button type="submit" class="btn btn-outline-dark">Logout</button>
@@ -29,8 +29,8 @@
       <form method="POST" action="/login">
         <input
           type="text"
-          name="username"
-          placeholder="Username"
+          name="email"
+          placeholder="Email"
           style="width: 200px"
         />
       <button type="submit" class="btn btn-outline-dark">Login</button>
