--- a/views/register.ejs
+++ b/views/register.ejs
@@ -25,9 +25,21 @@
       <form class="form-inline" action="/register" method="POST">
         <div class="form-group mb-2">
           <label for="email">Email:</label>
-          <input type="email" name="email" class="form-control" style="width: 250px; margin: 1em">
+          <input 
+            type="email"
+            name="email"
+            class="form-control"
+            placeholder="Email"
+            style="width: 250px; margin: 1em"
+          />
           <label for="password">Password:</label>
-          <input type="password" name="password" class="form-control" style="width: 250px; margin: 1em">
+          <input
+            type="password"
+            name="password"
+            class="form-control"
+            placeholder="Password"
+            style="width: 250px; margin: 1em"
+          />
           <button type="submit" class="btn btn-primary">Register</button>
         </div>
       </form>
